added the basic integration for the feature status and priority tables
